Define client and server JPMS options